fix: breadcrumb spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7719,6 +7719,11 @@ body.admin-bar .header-menu-area.sticky_menu {
     border-radius: 0;
   }
 }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .page-breadcrumb-area {
+    padding: 127px 24px;
+  }
+}
 
 .page-overlay {
   background: rgb(247, 247, 245);
